completed markup of thePlan section

--- a/index.html
+++ b/index.html
@@ -188,8 +188,18 @@
       </button>
       <button class="button">See features</button>
     </div>
-    <div class="plan__photo"></div>
+    <div class="plan__photo">
+      <div class="plan__photo_png">
+        <img src="img/Reminder_events.png">
+      </div>
+      <div class="plan__photo_png">
+        <img src="img/15.png">
+      </div>
+      <div class="plan__photo_png">
+        <img src="img/Reminder_search.png">
+      </div>
+
+    </div>
   </section>
 </body>
-
 </html>
